--- a/docs/213-Discussion.Rmd
+++ b/docs/213-Discussion.Rmd
@@ -2135,8 +2135,368 @@ ggplot(data = mydata2, aes(x = statusquo, y = vote2)) +
   theme_bw()
 ```
 
-
-
 ## Discussion VI
 
-TBD
+In today’s discussion, we will demonstrate how the analysis techniques used in OLS regression can also be applied to logistic regression. We will then explore methods for evaluating the performance of different logistic regression models to determine which is superior. Finally, we will review ordered logistic regression, discussing its differences from binary logistic regression and OLS regression.
+
+1.  Interactive Logistic Regression Model
+2.  Model Selection
+3.  Ordered Logit Model
+
+### 1. Interactive Logistic Regression Model
+
+Depending on your research question, similar to how an OLS model can be used, we can also investigate whether there are heterogeneous effects when applying a logistic regression model. Let's use the data of my POL212 project "Electoral Outcomes, Presidential Power, and Satisfaction with Democracy" as an example.
+
+-   Background: Scholars have amassed evidence showing that election outcomes affect how people think about democracy (Anderson & Guillory, 1997; Anderson & Tverdova, 2001; Anderson et al., 2005; Clarke & Acock, 1989; Curini et al., 2012). Compared to those who voted for losers, those who supported winners usually have a higher level of satisfaction and trust in democracy and have a more positive feeling of government responsiveness and political efficacy.
+
+-   Research Question: However, does it mean that losers' interests are then ignored by the government? Do people who did not vote for the winning party lose that much in the political game? In this project, I seek to understand how political institutions can shape citizens' perception of the legitimacy of democracies. In particular, I ask how does the extent of presidential power affect the winner-loser effect? Does presidential power amplify or dampen losers' satisfaction with democracy?
+
+-   Theory & Hypothesis: I argue that with different levels of presidential power, losers' satisfaction with democracy should also be different. In countries with powerful presidents, losers should be more unsatisfied with how the government works, for being the political minority in the system causes them to be largely excluded from the policy-making process. In countries with weaker presidents, losers should be less unsatisfied, for their policy interests still can be possibly realized by the premier and the cabinet, which is determined by the congressional election.
+
+    *Hypothesis: Losers will be more satisfied with democracy when the
+    president is weaker.*
+
+    Based on my theory, I am not only interested in the effect of winner-loser status on satisfaction with democracy but also how this effect is moderated by presidential power.
+
+    -   Outcome variable: satisfaction with democracy
+
+    -   Explainable variables: winner-loser status and presidential power
+
+    -   Control variables: divided government, gender, education level, age
+
+    The data can be assessed [here](https://drive.google.com/file/d/1kveKsgSGcAIKI86qrW71imC71Hvv60Oi/view?usp=sharing). All the variables inside are well coded and already remove NAs.
+
+    ```{r, message=FALSE}
+# load packages
+library(tidyverse)
+
+# import data 
+df <- read.csv("/Users/yu-shiuanhuang/Desktop/method-sequence/data/data_con.csv") %>%
+    mutate(SWD_b = ifelse(SWD > 2, 1, 0))
+```
+
+-   Data: The fourth module (2011-2016) of the Comparative Study of Electoral Systems (CSES) project. The CSES project consists of a nationally-representative post-election survey around democracies. The unit of analysis for this study is individuals. In particular, I analyze all presidential and semi-presidential countries that are rated as free by Freedom House at the time the election covered by the survey was held. This leaves the data with 15 countries covering Western and Eastern Europe, South and North America, and Asia.
+
+    ```{r, message=FALSE, echo=FALSE, warning=FALSE}
+knitr::kable(df %>% count(country, eyear, prespow1) %>% dplyr::select(-n), digits = 4)
+```
+
+-   Outcome variable: Satisfaction with Democracy (`SWD`)
+
+    In the CSES survey, the concept is measured by this question: "On the whole, are you (1) very satisfied, (2) fairly satisfied, (3) not very satisfied, or (4) not at all satisfied with the way democracy works in [COUNTRY]?" I reversed the code scale to (4) very satisfied, (3) fairly satisfied, (2) not very satisfied, or (1) not at all satisfied and recoded "(4) very satisfied" and "(3) fairly satisfied" to 1, and 0 otherwise
+
+-   Explainatory variables:
+
+    -- Loser (`loser`): I classified respondents as belonging to the political majority and minority by a question in CSES asking respondents for which party they feel closest to. `loser` is coded 1 if the party respondents feel closest to is not in accordance with the current president's party, and 0 otherwise
+
+    -- Presidential Power (`prespow1`): I use Doyle & Elgie's (2015) continuous presidential power score dataset. The range of this variable is between 0 and 1. The higher score means the stronger president; the lower score means the weaker president.
+
+-   Control variables:
+
+    -- Divided Government (`divided`): Past studies have shown that "unified government produces greater quantities of significant enactments and is more responsive to the public mood than is divided government" (Coleman, 1999: 821). In this case, I expect the coefficient of `divided` will be negative, for individuals will be more unsatisfied with democracy under a less responsive government. `divided` is coded 1 if the current executive-legislative relationship under the survey date of fieldwork is a divided government, meaning that the president party did not control the majority of the legislature. The data I use to establish `divided` is from the Database of Political Institutions 2017 (DPI 2017).
+
+    -- Gender (`gender`): Male vs Female.
+
+    -- Age (`age`): continuous scale, standardized.
+
+    -- Education (`education`): continuous scale.
+
+Let's first run the additive regression model and then include the interaction term, `loser` and `prespow1`, into the model so we can compare how taking this interaction term into account improves our model!
+
+```{r, message=FALSE, warning=FALSE}
+# additive model
+logit.swd <- glm(SWD_b ~ as.factor(loser) + prespow1 + as.factor(divided) + 
+               as.factor(gender) + education + age, data = df, 
+               family = binomial(link = "logit"))
+
+# interactive model
+logit.swd.int <- glm(SWD_b ~ as.factor(loser)*prespow1 + as.factor(divided) + 
+               as.factor(gender) + education + age, data = df, 
+               family = binomial(link = "logit"))
+```
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+library(stargazer)
+stargazer(logit.swd, logit.swd.int, 
+          column.sep.width="1pt", font.size="small", digits=5,
+          title = "The Effect of Electoral Outcomes and Presidential Power on Satisfaction with Democracy (Logistic Regression Model).",
+          dep.var.labels = c("Satisfaction with Democracy"),
+          covariate.labels = c("Loser", "Presidential Power", "Divided Government",
+                               "Male", "Education Level", "Age", 
+                               "Loser * Presidential Power"),
+          column.labels = c("Additive Model", "Interactive Model"), 
+          star.cutoffs = c(0.05, 0.01, 0.001), type = "text")
+```
+
+What does the coefficient of `Loser` mean? The regression outputs for
+additive and interactive models here are in such form:
+
+Additive Model:
+
+$$
+\begin{aligned}
+log \frac{\pi_i}{1-\pi_i} & =\alpha + \beta_{Loser} Loser_i + \beta_{Prespow} Prespow_i + \beta_{Male} Male_i + \beta_{Age} Age_i + \beta_{Education} Education_i + \beta_{DividedGov} DividedGov_i \\
+&= 0.80402-0.83762Loser_i-1.11516Prespow_i+0.00797Male_i+0.00954Age+0.06027Education_i-0.05990DividedGov_i
+\end{aligned}
+$$
+Interactive Model:
+
+$$
+\begin{aligned}
+log \frac{\pi_i}{1-\pi_i} &= \alpha + \beta_{Loser} Loser_i + \beta_{Prespow} Prespow_i + \beta_{Loser*Prespow} (Loser*Prespow)_i + \beta_{Male} Male_i + \beta_{Age} Age_i + \beta_{Education} Education_i + \beta_{DividedGov} DividedGov_i \\
+&=0.68884-0.69264Loser_i-0.65411Prespow_i-0.60460(Loser*Prespow)_i + 0.00855Male_i+0.00987Age+0.06064Education_i-0.05880DividedGov_i
+\end{aligned}
+$$
+where $\pi_i$=Pr(Being satisfied with democracy)
+
+Let's focusing on interpreting the interactive model! The coefficient of the "Loser" variable is significantly positive, indicating that compared to being a winner, being a loser is associated with a 0.69264 unit decrease in the log-odds. Additionally, as the strength of the president increases in a country, the effects of being a loser are associated with an additional 0.60460 unit decrease in the log-odds.
+
+Now transform the regression output into odds ratio (i.e., $\frac{\pi_i}{1-\pi_i}$; the odds of a voter feeling more satisfied with democracy versus feeling less satisfied with democracy). How to transform log-odds into odds ratio? Exponentiate the log-odds!
+
+```{r, message=FALSE, warning=FALSE}
+exp(coef(logit.swd.int))
+```
+
+The odds ratio of the loser variable means that the odds of a voter feeling more satisfied with democracy versus feeling less satisfied with democracy is $50% ((1-0.50)*100%)$ lower for a voter being a loser than being a winner. This means that a voter will feel less satisfied with democracy when he/she supported a losing party. Furthermore, the odds ratio of the interaction term suggests that the odds of a voter feeling more satisfied with democracy versus feeling less satisfied with democracy is $45% ((1-0.55)*100%)$ more lower for a voter being a loser than being a winner as one-unit increase in presidential power in a country.
+
+Plot the predicted effects to show the pattern more straightforwardly!
+
+```{r, message=FALSE, warning=FALSE}
+prespow1 <- seq(0, 1, by = 0.01) 
+
+# create a new data for the predicted SWD of losers under different presidential level
+dfplot.l <- data.frame(loser = rep(1, length(prespow1)), # 1 means loser
+                       prespow1 = prespow1,
+                       divided = rep(1, length(prespow1)), # set at the median
+                       gender = rep("Female", length(prespow1)), # set at the median
+                       education = rep(4, length(prespow1)), # set at the median
+                       age = rep(0, length(prespow1))) # set at the mean
+
+pred.l <- predict(logit.swd.int, newdata = dfplot.l, type = "response", se.fit = TRUE)
+
+# create a new data for the predicted SWD of winners under different presidential level
+dfplot.w <- data.frame(loser = rep(0, length(prespow1)), # 0 means winner
+                       prespow1 = prespow1,
+                       divided = rep(1, length(prespow1)), # set at the median
+                       gender = rep("Female", length(prespow1)), # set at the median
+                       education = rep(4, length(prespow1)), # set at the median
+                       age = rep(0, length(prespow1))) # set at the mean
+pred.w <- predict(logit.swd.int, newdata = dfplot.w, type = "response", se.fit = TRUE)
+```
+
+```{r, message=FALSE, warning=FALSE, fig.align='center', fig.width=5, fig.height=4}
+# scatterplot of satisfaction with democracy for presidential power and the fitted probabilities 95% confidence interval
+predict.df <- data.frame(x = prespow1,
+                         prob.w = pred.w$fit,
+                         upr.w = pred.w$fit + (1.96 * pred.w$se.fit),
+                         lwr.w = pred.w$fit - (1.96 * pred.w$se.fit),
+                         prob.l = pred.l$fit,
+                         upr.l = pred.l$fit + (1.96 * pred.l$se.fit),
+                         lwr.l = pred.l$fit - (1.96 * pred.l$se.fit)
+                         )
+ggplot() +
+  geom_hline(yintercept = 1, col = "gray23", alpha = 0.7, linetype = "dashed") +
+  geom_hline(yintercept = 0, col = "gray23", alpha = 0.7, linetype = "dashed") +
+  geom_line(data = predict.df, aes(x = prespow1, y = prob.w), col = "dodgerblue2", alpha = 0.7, lwd = 1) +
+  geom_line(data = predict.df, aes(x = prespow1, y = upr.w), col = "dodgerblue2", alpha = 0.7, linetype = "dashed") +
+  geom_line(data = predict.df, aes(x = prespow1, y = lwr.w), col = "dodgerblue2", alpha = 0.7, linetype = "dashed") +
+  geom_line(data = predict.df, aes(x = prespow1, y = prob.l), col = "salmon2", alpha = 0.7, lwd = 1) +
+  geom_line(data = predict.df, aes(x = prespow1, y = upr.l), col = "salmon2", alpha = 0.7, linetype = "dashed") +
+  geom_line(data = predict.df, aes(x = prespow1, y = lwr.l), col = "salmon2", alpha = 0.7, linetype = "dashed") +
+  scale_y_continuous(breaks = seq(0, 1, 0.2), labels = seq(0, 1, 0.2)) +
+  scale_x_continuous(breaks = seq(0, 1, 0.2), labels = seq(0, 1, 0.2)) +
+  labs(x = "Presidential Power", y = "Satisfaction with Democracy") +
+  annotate("text", x = 0.1, y = 0.3, label = "Winner", color = "dodgerblue2") +
+  annotate("text", x = 0.1, y = 0.2, label = "Loser", color = "salmon2") +
+  theme_bw()
+```
+
+### 2. Model Selection
+
+Which model performs better?
+
+1.  Likelihood-ratio Test
+
+    The Likelihood-Ratio Test (LRT) is a statistical test used to compare the goodness of fit of two models based on the ratio of their likelihoods. Specifically, we will compare a full model with a nested null model. Fitting these models produces a likelihood for each, $L_1$ and $L_0$; the null is a specialized version of the full, so $L_1 \geq L_0$.
+
+    $$G^2_0=2ln(\frac{L_1}{L_0})=2(lnL_1-lnL_0)$$
+    is the likelihood-ratio test statistic for the null; under the null, this statistic has a chi-square distribution with q (\# of coefficients) degrees of freedom. If the null hypothesis (the null model) is supported by the observed data, there should be no statistically significant difference between the two likelihoods. Noted that likelihood-ratio test can only compare two models when one is *nested* within the other.
+
+    Take the above additive and interaction models of predicting satisfaction with democracy as an example, in which the former is the nested null model and the latter is the full model. Let's first calculate the $lnL_1$ and $lnL_0$ for the nested null model (additive model) and the full model (interactive model) and then compute the $G^2_0$ by hand in R.
+
+    ```{r, message=FALSE, warning=FALSE}
+# additive model (nested null model)
+logLik(logit.swd)
+```
+
+    ```{r, message=FALSE, warning=FALSE}
+    # interactive model (full model)
+    logLik(logit.swd.int)
+    ```
+
+    ```{r, message=FALSE, warning=FALSE}
+    # g statistic
+    g <- 2*(-12124.83 - -12127.18); g
+    ```
+
+    To test if this g statistic is statistically significant, we can apply `lrtest()` in `lmtest` package. `lrtest()` is a generic function for carrying out likelihood ratio tests in R.
+
+    ```{r, message=FALSE, warning=FALSE}
+library(lmtest)
+lrtest(logit.swd, logit.swd.int)
+```
+
+    The likelihood ratio test shows that including the interaction term does significantly increase the goodness-of-fit. The Chi-square value demonstrates that the difference between the two models is statistically significant at 0.05 p-value level.
+
+2.  Akaike Information Criterion (AIC)
+
+    Information measures penalize including predictors that do not significantly improve model fit. These measures allow one to compare different models, even *non nested* ones. The best known of these measures is the **Akaike Information Criterion (AIC)**, which judges a model by how close its fitted values are to the true expected values. The optimal model is the one that tends to have fitted values closest to the true outcome probabilities. This is the model that minimizes:
+
+    </center>$AIC=-2(lnL_M-P)=Dev_M+2P$ where $P$ is the number of parameters in the model (including $\alpha$)</center>
+
+    The smallest the AIC value, the better the fit. Since fit will improve with additional predictors, adding $2P$ is a penalty for adding predictors in the models. The logistic regression output in R by default gives you AIC. You can also use `AIC()` from `stats` package to find it.
+
+
+    ```{r, message=FALSE, warning=FALSE}
+    AIC(logit.swd)
+    AIC(logit.swd.int)
+```
+
+    The AIC in the interactive model is smaller than the AIC for the additive model with a difference of 2.69 (24,265.66 \< 24,268.35). However, how to decide if such difference is weak or strong? Raftery (1995) suggests this guide for determining whether a difference is weak or strong.
+
+    | Absolute Difference | Evidence    |
+    |---------------------|-------------|
+    | 0-2                 | Weak        |
+    | 2-6                 | Positive    |
+    | 6-10                | Strong      |
+    | \>10                | Very strong |
+
+### 3. Ordered Logit Model
+
+OLS regression assumes **interval level** measurement for the dependent variable. This is not appropriate for modeling ordinal (rank-order) variables (e.g., strongly disagree 1 - strongly agree 4). Nevertheless, it is common for researchers to treating ordinal dependent variables as interval-level variables and model them using OLS regression. This modeling approach assumes effects are linear and additive, which is inappropriate when the outcomes sould be modeled as nonlinear and nonadditive. Estimates of effects can be biased because of this and predictions can be inaccurate at extremes. Additionally, statistical hypothesis tests may be unsound because standard OLS assumptions about the error term are not met (i.e., applying OLS to ordinal data will result in non-normal heteroskedastic errors).
+
+Best case scenario for using OLS regression with ordered dependent variable:
+
+- The underlying conceptual variable is interval-level in nature. 
+
+- The ordinal representation of the variable uses many
+categories (e.g., 8 or more) and cases are distributed somewhat evenly
+across the categories.
+
+Ordered logit regression is a method developed to fulfill the goal of modeling the relative frequency distribution of cases across three or more ranked categories of the dependent variable. Ordered logit regression predicts the expected relative frequency distribution of cases across the ranked categories of the dependent variable under any combination of values on relevant independent variables. The effect of a predictor ($X$) will shift the distribution of cases across the categories of the dependent variable ($Y$) in a systematic direction toward higher or lower categories. Specifically, the relative frequency distribution of cases will systematically shift toward higher categories if $X$ has a positive effect and it will systematically shift toward lower categories if $X$ has a negative effect.
+
+Let's use the data of my POL212 project "Electoral Outcomes, Presidential Power, and Satisfaction with Democracy" as an example again. Instead of generating a binary outcome variable, let's use the original ordinal-level measurement.
+
+```{r, message=FALSE, warning=FALSE}
+# import data 
+df <- read.csv("/Users/yu-shiuanhuang/Desktop/method-sequence/data/data_con.csv")
+df$SWD <- as.factor(df$SWD)
+```
+
+```{r, message=FALSE, warning=FALSE}
+library(MASS)
+ologit <- polr(SWD ~ loser + prespow1 + divided + 
+               gender + education + age, data = df, Hess = TRUE)
+ologit
+```
+
+Again, we can transform the log-odds coefficients to odds ratios by
+exponentiating them.
+
+```{r, message=FALSE, warning=FALSE, fig.align='center', fig.width=6, fig.height=5}
+exp(coef(ologit))
+```
+
+If you want to get odds ratios with confidence intervals, you can use
+`confint()` to find them.
+
+```{r, message=FALSE, warning=FALSE}
+confint(ologit)
+```
+
+How to interpret the effects of winner-loser status?
+
+The odds of having one level higher on satisfaction with democracy is 56% ($(1-0.44)*100\%$) lower for those who supported the losing party than those who supported the winning party. As one-unit increase in the presidential power in a country, the odds of having one level higher on satisfaction with democracy significantly decreases by 70%.
+
+Let's calculate the predicted probabilities for each category of the outcome variable for two covariate profiles. In these profiles, only the winner-loser status differs, while all other variables are set at the mean or median.
+
+```{r, message=FALSE, warning=FALSE}
+pro1 <- data.frame(loser = 1, 
+                   prespow1 = 0.23147, # set at the median
+                   divided = 1, # set at the median
+                   gender = "Female", # set at the median
+                   education = 4, # set at the median
+                   age = 0) # set at the mean
+prob1 <- predict(ologit, newdata = pro1, type = "prob"); prob1
+```
+
+```{r, message=FALSE, warning=FALSE}
+sum(prob1)
+```
+
+Note that the summation of the predicted probabilities for each category
+of the outcome variable should be 1!
+
+```{r, message=FALSE, warning=FALSE}
+pro2 <- data.frame(loser = 0, 
+                   prespow1 = 0.23147, # set at the median
+                   divided = 1, # set at the median
+                   gender = "Female", # set at the median
+                   education = 4, # set at the median
+                   age = 0) # set at the mean
+prob2 <- predict(ologit, newdata = pro2, type = "prob"); prob2
+```
+
+| Profile | Not at all satisfied Pr(Y=1) | Not very satisfied Pr(Y=2) | Fairly satisfied Pr(Y=3) | Very satisfied Pr(Y=4) |
+|---------|------------------------------|----------------------------|----------------------------|------------------------|
+| Loser   | 0.1578                       | 0.3701                     | 0.4290                     | 0.0430                 |
+| Winner  | 0.0755                       | 0.2521                     | 0.5789                     | 0.0935                 |
+
+Now, let's create a plot showing the fitted probabilities for each category of the outcome variable, considering different levels of presidential power, while keeping all other variables at their mean or median values.
+
+```{r, message=FALSE, warning=FALSE, fig.align='center', fig.width=6, fig.height=5}
+x <- seq(0, 1, 0.01)
+pro <- data.frame(loser = rep(1, length(x)), # set at the median
+                  prespow1 = x,
+                  divided = rep(1, length(x)), # set at the median
+                  gender = rep("Female", length(x)), # set at the median
+                  education = rep(4, length(x)), # set at the median
+                  age = rep(0, length(x))) # set at the mean
+prob <- predict(ologit, newdata = pro, type = "prob")
+```
+
+```{r, message=FALSE, warning=FALSE, fig.align='center', fig.width=5, fig.height=4}
+# scatterplot of satisfaction with democracy for presidential power and the fitted probabilities 95% confidence interval
+predict.df <- data.frame(prespow1 = x, prob)
+names(predict.df) <- c("prespow1" ,"Y1", "Y2", "Y3", "Y4")
+
+ggplot() +
+  geom_hline(yintercept = 1, col = "gray23", alpha = 0.7, linetype = "dashed") +
+  geom_hline(yintercept = 0, col = "gray23", alpha = 0.7, linetype = "dashed") +
+  geom_line(data = predict.df, aes(x = prespow1, y = Y1), col = "dodgerblue2", alpha = 0.7, lwd = 1) +
+  geom_line(data = predict.df, aes(x = prespow1, y = Y2), col = "darkseagreen3", alpha = 0.7, lwd = 1) +
+  geom_line(data = predict.df, aes(x = prespow1, y = Y3), col = "salmon2", alpha = 0.7, lwd = 1) +
+  geom_line(data = predict.df, aes(x = prespow1, y = Y4), col = "darkorchid3", alpha = 0.7, lwd = 1) +
+  scale_y_continuous(breaks = seq(0, 1, 0.2), labels = seq(0, 1, 0.2)) +
+  scale_x_continuous(breaks = seq(0, 1, 0.2), labels = seq(0, 1, 0.2)) +
+  labs(x = "Presidential Power", y = "Satisfaction with Democracy") +
+  annotate("text", x = 0.85, y = 0.95, label = "Not at all satisfied", color = "dodgerblue2") +
+  annotate("text", x = 0.85, y = 0.9, label = "Not very satisfied", color = "darkseagreen3") +
+  annotate("text", x = 0.85, y = 0.85, label = "Fairly satisfied", color = "salmon2") +
+  annotate("text", x = 0.85, y = 0.8, label = "Very satisfied", color = "darkorchid3") +
+  theme_bw()
+```
+
+
+One assumption must be held when using ordered logit models, which is the **parallel regression assumption** (also known as the proportional odds assumption). The parallel regression assumption assumes that the relationship between the predictors and response are the same for each pair of outcome categories in the ordered logit model. If the assumption does not hold, it means that it is possible that one or more predictors has a different effect over different categories or a different range of the response. This means that some predictors might have stronger effect on some values of the dependent variable but have weaker effect on some others.
+
+To test whether the assumption of equal coefficients across different logits is justified, let's perform the **Brant test**.
+
+```{r, message=FALSE, warning=FALSE, fig.align='center', fig.width=6, fig.height=5}
+brant::brant(ologit)
+```
+
+The result shows that our main model actually violates the parallel
+assumption, for the p-values for the model, presidential power, divided government, gender, and age are all below 0.05. These violations suggest that a simple ordered logit model might not be a good fit of these data. To address the poor fit of this model, we can try re-estimating our findings by conducting the **generalized ordered logit model**. This type of model relaxes the parallel regression assumption and allows each category of the response variable to have different coefficients. However, one caveat is that, although the generalized ordered logit model is more flexible than an ordered logit model, it is less efficient since it has to generate more parameters than an ordered logit model. Therefore, sometimes, when encountering this violation, a common practice is do nothing.
+
+
